2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedObject::refcount_): Change type to long,
	so that a full word will be used on 64 bit machines.
	(SharedPtr): Add a paragraph about operator const void*() to the
	class description.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Append an XGETTEXT_KEYWORDS = ... line to the
	generated po/Makefile.in.in file.  These flags are picked up
	by intltool-update and passed to xgettext.  Use this feature
	to make xgettext recognize Util::compose() format strings.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (GETTEXT_PACKAGE): Use a plain shell assignment
	plus a separate AC_SUBST([GETTEXT_PACKAGE]) in order to please
	the fucked up intltool-update script.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.h (translate): Add G_GNUC_FORMAT(1) attribute.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::find_add_file): Create the FileInfo
	object in advance before inserting the new row in order to improve
	exception safety.
	(FileTree::find_fill_dirstack): Same here for the DirInfo object.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetreeprivate.{cc,h} (FileTreePrivate::next_match_file):
	Move code from FileTree::next_match_file() here.
	(FileTreePrivate::prev_match_file):
	Move code from FileTree::prev_match_file() here.

	* src/filetree.{cc,h} (FileTree::next_match_file): Remove.
	(FileTree::prev_match_file): Remove.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::next_match_file): Replace the
	collapse_stack parameter by a single Gtk::TreeModel::Path pointer,
	because we really don't have to collapse each expanded child row
	explicitely.  Simplify the implementation accordingly.
	(FileTree::prev_match_file): ditto.
	(FileTree::select_next_file): Get rid of the collapse_stack